# drawlots

./: .gitignore  CMakeLists.txt
include/: dao.h  managestudentID.h  randomgetstudentID.h
src/: main.cpp
